--- a/practicing joins/practice_joins.Rmd
+++ b/practicing joins/practice_joins.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Practicing joins"
-author: "Template: Ian Hussey; content: [Student name]"
+author: "Template: Ian Hussey; content: [Elin Weimer]"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   html_document:
@@ -53,7 +53,10 @@ create 'data_combined' by joining data_amp_summary_subset and data_age_gender_su
 
 ```{r}
 
-# data_combined <- 
+data_combined <-
+  full_join(x = data_amp_summary_subset,
+            y = data_age_gender_subset,
+            by = "unique_id")
 
 ```
 
@@ -63,7 +66,10 @@ create 'data_self_reports_and_their_amp_data' by joining data_selfreport_summary
 
 ```{r}
 
-# data_self_reports_and_their_amp_data <- 
+data_self_reports_and_their_amp_data <- 
+  left_join(x = data_selfreport_summary_subset,
+            y = data_amp_summary_subset,
+            by = "unique_id")
 
 ```
 
@@ -73,7 +79,10 @@ do the opposite: create 'data_amp_data_and_their_self_reports' by joining data_a
 
 ```{r}
 
-# data_amp_data_and_their_self_reports <- 
+ data_amp_data_and_their_self_reports <- 
+  right_join(x = data_selfreport_summary_subset,
+            y = data_amp_summary_subset,
+            by = "unique_id")
 
 ```
 
@@ -83,7 +92,10 @@ create data_combined_2 by joining 'data_combined' and data_selfreport_summary_su
 
 ```{r}
 
-# data_combined_2 <- 
+ data_combined_2 <- 
+  inner_join(x = data_combined,
+             y = data_selfreport_summary_subset,
+             by = "unique_id")
 
 ```
 
@@ -92,8 +104,10 @@ create data_combined_2 by joining 'data_combined' and data_selfreport_summary_su
 create 'data_missing_ids' which should list the unique_ids are missing from data_unique_id_subset but are present in at least one of data_age_gender_subset, data_amp_summary_subset, and data_selfreport_summary_subset. This will require two different joins. Which? Implement them.
 
 ```{r}
+data_missing_ids <- data_age_gender_subset %>%
+  full_join(data_amp_summary_subset, by = "unique_id") %>%
+  full_join(data_selfreport_summary_subset, by = "unique_id")
 
-# data_missing_ids <- 
 
 ```
 
