--- a/practicing joins/practice_joins.Rmd
+++ b/practicing joins/practice_joins.Rmd
@@ -108,6 +108,8 @@ data_missing_ids <- data_age_gender_subset %>%
   full_join(data_amp_summary_subset, by = "unique_id") %>%
   full_join(data_selfreport_summary_subset, by = "unique_id")
 
+data_missing_ids <- data_missing_ids %>%
+  anti_join(data_unique_id_subset, by = "unique_id")
 
 ```
 
