--- a/processing_ian_week_5 _Homework.Rmd
+++ b/processing_ian_week_5 _Homework.Rmd
@@ -246,17 +246,20 @@ data_selfreport_tidied2 %>%
 
 - Exclude them
 ```{r}
-data_selfreport_complete <- data_selfreport_tidied2 %>% 
+data_selfreport_p3 <- data_selfreport_tidied2 %>% 
   count(unique_id, name = "num_trials") %>% 
   filter(num_trials == 3)
  
 ```
+Besser mit group by und sumamrize machen weil, das ist eigentlich das gleiche wie count aber droppt nicht alle anderen spalten aus data¨
+(Denn muessmer nacher nümme joine)
 
-- check your exclusions worked. FRAGE!!! warum kommt beim n jetzt 1 und nicht 3????
+- check your exclusions worked. FRAGE!!! warum kommt beim n jetzt 1 und nicht 3???? --> muesch wieder joine
 ```{r}
-data_selfreport_complete %>% 
-  count(unique_id)
-
+data_selfreport_complete <-
+  inner_join(data_selfreport_tidied,
+             data_selfreport_p3,
+             by = "unique_id")
 ```
 
 - use: mutate, group_by, summarize, _join
@@ -283,7 +286,8 @@ Create an overall AMP bias score. Score each trial as having been evaluated as c
 
 ```{r}
 
-#data_amp_score_congruence <- data_amp_raw 
+#cal
+data_amp_score_congruence <- data_amp_raw 
 
 ```
 
