--- a/reshaping data with pivots/code/reshaping_data.Rmd
+++ b/reshaping data with pivots/code/reshaping_data.Rmd
@@ -35,6 +35,7 @@ dir.create("plots")
 library(dplyr)
 library(tidyr)
 library(tibble)
+devtools::install_github("debruine/faux")
 library(faux)
 library(janitor)
 library(ggplot2)
@@ -55,7 +56,7 @@ library(kableExtra)
 # set seed for reproducibility
 set.seed(123)
 
-# generate data 
+# generate data, nnorm macht normalverteilte daten
 data_wide <- 
   faux::rnorm_multi(n = 100,
                     vars = 5,
@@ -69,7 +70,7 @@ data_wide <-
 # recode responses less than 1 or more than 5 to those values, then round scores to whole numbers
 # note that {faux} has functions for doing this better
 data_wide_likert <- data_wide %>%
-  mutate(across(starts_with("item_"), ~ round_half_up(.x, digits = 0))) %>%
+  mutate(across(starts_with("item_"), ~ round_half_up(.x, digits = 0))) %>% # mit across kann man gleich mehrere spalten mit gleichem code bearbeiten
   mutate(across(starts_with("item_"), ~ ifelse(.x < 1, 1, ifelse(.x > 5, 5, .x))))
 
 ```
@@ -86,6 +87,8 @@ res_alpha <- data_wide_likert %>%
 
 cronbachs_alpha_estimate <- res_alpha$total$raw_alpha |>
   round_half_up(digits = 2)
+
+cronbachs_alpha_estimate
 
 ```
 
@@ -139,6 +142,11 @@ ggplot(data_long, aes(x = response)) +
 
 - What other ways could you specify this pivot_longer call's arguments?
 
+negative selection: cols = -id
+oder "contains": cols = contains ("tem_")
+
+facet_wrap() ist to ggplot as group_bys() is to dplyr
+
 ### Calculate sum scores
 
 ```{r}
@@ -173,6 +181,11 @@ data_wide_again <- data_long %>%
 
 data_item_and_sum_scores <- data_wide_again %>%
   left_join(sum_scores, by = "id")
+#DO NOT use bind_cols weil dann werden einfach Dataframes zusammengewurstelt und nicht nach participant id sortiert, so wie es bei joins gemacht wird
+```
+
+
+```{r}
 
 ```
 
@@ -181,7 +194,7 @@ data_item_and_sum_scores <- data_wide_again %>%
 Wrangle the demographics data included in this exercise more efficiently by reshaping it into wide format. Before, we used filter() to wrangle the age and gender data separately.
 
 ```{r}
-
+data <- read_csv("data_demographics_raw.csv")
 
 
 ```
