--- a/ Plotting_Assignment/Code/Assignment.Rmd
+++ b/ Plotting_Assignment/Code/Assignment.Rmd
@@ -9,16 +9,6 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
 
 
 ```{r}
@@ -69,7 +59,7 @@ ggplot(tech_exports_clean, aes(x = year, y = high_tech_exports, color = country)
 
 ```
 
-Why is it a good plot?
+Why is this a good plot?
 - Titles and axis labels provide context to the data
 - consistent scales and distinguishable colours/ simple design allows easy comparison between countries
 - The plot shows trends over time for each country
@@ -121,11 +111,14 @@ ggplot(tech_exports_clean, aes(x = as.factor(year), y = high_tech_exports, fill 
   )
 
 ```
-Why is it a bad plot?
+
+
+
+Why is this a bad plot?
 - colours used are indistinguishable and distracting
-- Barplot is generally not a good idea to visualize this type of data (way too much information on one bar, we can not see a trend over time for the different countries)
+- Bar plot is generally not a good idea to visualize this type of data (way too much information on one bar, we can not see a trend over time for the different countries)
 - bars have irregular widths which makes it even more confusing
-- x axis ist not readable
+- x axis is not readable
 - title and axis labels are generally not very clear and don't provide context to the data
 
 
